# knights_edge

./: .gitignore  Cargo.toml
assets/camp/: campfire.aseprite
assets/configs/: creatures.ron
assets/eye/: eye.aseprite
assets/foliage/bush/: bush_0.aseprite
assets/foliage/plants/: pink_flower.aseprite  purple_flower.aseprite  red_flower.aseprite
assets/foliage/rocks/small_rock/: small_rock_0.aseprite  small_rock_1.aseprite
assets/foliage/tree/: birch.aseprite  birch_flipped.aseprite  birch_temp.aseprite  birch_temp_flipped.aseprite  tree_0.aseprite
assets/grass_variants/grass_full/: grass_full_0.aseprite  grass_full_1.aseprite  grass_full_2.aseprite  grass_full_3.aseprite  grass_full_4.aseprite  grass_full_5.aseprite  grass_full_6.aseprite  grass_full_7.aseprite  grass_full_8.aseprite
assets/items/: apple.aseprite  item_shadow.aseprite
assets/player/: player.aseprite
assets/snow/snow_full/: snow_full_0.aseprite
assets/water/water_full/: water_full_0.aseprite
shaders/: grass_sway.wgsl
src/: asset_loading.rs  creatures.rs  debug.rs  items.rs  main.rs  physics.rs  player.rs  render.rs  spawning.rs  triggers.rs  world.rs
src/creatures/: ai.rs  attributes.rs  data.rs  spawning.rs  states.rs  triggers.rs  types.rs
src/items/: actions.rs  inventory.rs
src/physics/: collision.rs  player_movement_physics.rs
src/player/: player_camera.rs
src/render/: grass_sway.rs
src/world/: daycycle.rs  world_generation.rs  world_generator.rs  world_lib.rs  world_noise.rs  world_rendering.rs
src/world/entities/: mod.rs
(+6 files in other folders)
