[package]
name = "knights_edge"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", features = ["debug", "wav"] }
sha2 = "0.11.0"
fastnoise-lite = "*"
dynfmt = { version = "0.1", features = ["curly"] }
bevy_firefly = "0.18.0"
bevy_spritesheet_animation = "6.1.0"
ron = "0.12.0"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
rand = "*"